# manga4deck

./: .gitignore  README.md  app.py  db.py  install.sh  installer.desktop  kavita.py  package.json  prepare-backend.js  req.txt  start-dev.js  vite.config.ts
.github/workflows/: main.yml
app/: index.html  package.json  tailwind.config.js
app/src/: App.tsx
app/src-tauri/backend/lib/: kavita.py
app/src-tauri/src/: main.rs
src/: App.tsx  Cargo.toml  main.tsx
src-native/: Cargo.toml
src-native/src/: logger.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/backend/: app.py  build.py  req.txt
src-tauri/backend/lib/: db.py  kavita.py
src-tauri/src/: dioxus_ui.rs  fallback_html.rs  kavita.rs  lib.rs  logger.rs  main.rs  storage.rs
src/components/: Dashboard.tsx  Library.tsx  LogViewer.tsx  ScrollToTop.tsx  Series.tsx  ServerSettings.tsx  Shelf.tsx  Toast.tsx  ToastContainer.tsx  Viewer.tsx
src/services/: Api.tsx  WebSocketService.ts  useLocalStorage.tsx
src/src/: dioxus_ui.rs  lib.rs  main.rs
