[package]
name = "manga4deck"
version = "0.4.1"
description = "Manga reader for Kavita on Steam Deck"
authors = ["boddicheg"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
once_cell = "1.19"
tower-http = { version = "0.5", features = ["cors"] }
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = "0.30"
sea-query = "0.30"
