[package]
name = "manga4deck"
version = "0.5.5"
description = "Manga reader for Kavita on Steam Deck"
authors = ["boddicheg"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.3", features = ["macros"] }
once_cell = "1.19"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
dirs = "6.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
rusqlite = "0.34.0"
md-5 = "0.10.6"
ureq = "2"
