[package]
name = "manga4deck"
version = "0.5.6"
description = "Manga reader for Kavita on Steam Deck"
authors = ["boddicheg"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
once_cell = "1.19"
tower-http = { version = "0.6", features = ["cors", "fs"] }
dirs = "6.0"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = "0.34"
md-5 = "0.10"
ureq = "2.11"
